<resources>
    <string name="app_name">Messages</string>
    <string name="messages">Messages</string>
    <string name="add">add</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="inbox">Inbox</string>
    <string name="archived">Archived</string>
    <string name="schedule">Schedule</string>
    <string name="starred">Starred</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="settings">Settings</string>
    <string name="selected">Selected</string>
    <string name="delete">Delete</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="restor">Restore</string>
    <string name="unarchived">Unarchived</string>
    <string name="block_amp_spam"><![CDATA[Block & Spam]]></string>
    <string name="empty_item_text_archive">Your archived conversations will appear here</string>
    <string name="empty_item_text_block">Your blocked conversations will appear here</string>
    <string name="pin">Pin</string>
    <string name="block">Block</string>
    <string name="delete_conversation">Delete Conversation?</string>
    <string name="delete_con">Delete Conversation</string>
    <string name="remove_this_conversation_permanently">Remove this conversation permanently?</string>
    <string name="cancel">Cancel</string>
    <string name="unpin">Unpin</string>
    <string name="edit_categories">Edit categories</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="no_conversation_found">No conversation found.</string>
    <string name="blocked_messages">Blocked messages</string>
    <string name="no_messages_selected">No messages selected</string>
    <string name="unblock">Unblock</string>
    <string name="unblock_messages">Unblock Messages</string>
    <string name="block_messages">Block Messages</string>
    <string name="do_you_want_to_unblock_messages">Do you want to unblock messages?</string>
    <string name="do_you_want_to_block_messages">Do you want to block messages?</string>
    <string name="drop_messages">Drop Messages</string>
    <string name="you_will_not_receive_messages">You will not receive messages from people\non the block list</string>
    <string name="blocked">Blocked</string>
    <string name="unblock_to_receive_message">Unblock to receive messages from this\nsender</string>
    <string name="contact_blocked">Contact Blocked</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string name="new_conversation">New conversation</string>
    <string name="recipient">Recipient</string>
    <string name="write_a_message">Write a message...</string>
    <string name="type_a_name_or_number">Type a name or number</string>
    <string name="done">Done</string>
    <string name="no_contacts_selected">No contacts selected</string>
    <string name="this_is_the_start_of_your_conversation">This is the start of your conversation, Say \nsomething nice!</string>
    <string name="messages_copied">Messages copied</string>
    <string name="copy">Copy</string>
    <string name="can_t_replay">Can’t replay to this short code.|&#160; </string>
    <string name="learn_more">Learn more</string>
    <string name="this_sms_is_100_secure">This SMS is 100% secure. Messages never collect data without prior consent. Everything is processed and stored on your phone.</string>
    <string name="ok">Ok</string>
    <string name="short_codes_are_local">Short codes are local or personalized numbers for sending international SMS messages.</string>
    <string name="you_can_reply">You can reply to numbers-only short codes,but not to codes with letters and numbers,like \"MAG007".</string>
    <string name="otp_copied">OTP Copied!</string>
    <string name="carrier_error">Couldn\'t send message, carrier error</string>
    <string name="error_service_unavailable">Couldn\'t send message, service unavailable</string>
    <string name="error_radio_turn_off">Couldn\'t send message, radio turned off</string>
    <string name="simcard_not_available">SIM card not available</string>
    <string name="unknown_error_sending_message">Couldn\'t send message, error code: %d</string>
    <string name="delivered">Delivered</string>
    <string name="sending">Sending...</string>
    <string name="failed_to_send">Failed to send</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="continues">Continue</string>
    <string name="this_sender_isnot_your_contacts">This sender isn’t one of your\ncontacts</string>
    <string name="link_from_people">Link from people that you don’t know may open\nunwanted or harmful content</string>
    <string name="continue_with_possible_risk">Continue with possible risk</string>
    <string name="i_understand">I Understand that this link may be harmful</string>
    <string name="empty_starred_msg">Your Starred messages will appear here</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="view_details">View Details</string>
    <string name="customize_notification">Customize notification</string>
    <string name="archive">Archive</string>
    <string name="copied">Copied</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="conversation_title">Conversation title</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="tap_to_customize">Tap to customize</string>
    <string name="notification_previews">Notification Previews</string>
    <string name="show_name_and_message">Show name and message</string>
    <string name="wake_screen">Wake screen</string>
    <string name="wake_screen_when_notification_arrives">Wake screen when notification arrives</string>
    <string name="show_sender_message"><![CDATA[Show sender & Message]]></string>
    <string name="show_only_sender">Show Only Sender</string>
    <string name="show_nothing">Show Nothing</string>
    <string name="conversation">Conversation</string>
    <string name="search_messages">Search messages</string>
    <string name="contacts">Contacts</string>
    <string name="your_conversation_will_apper_here">Your conversation will apper here</string>
    <string name="scheduled_messages">Scheduled messages</string>
    <string name="automatically_send">Automatically send a messages, at the exact moment you’d like</string>
    <string name="cannot_select_past_time">Cannot select past time</string>
    <string name="please_enter">Please enter a message and select time</string>
    <string name="message_scheduled">Message Scheduled!</string>
    <string name="message_copied">Message copied!</string>
    <string name="send_now">Send Now</string>
    <string name="copy_text">Copy Text</string>
    <string name="schedule_at">Schedule at\n</string>
    <string name="welcome_to_messages">Welcome to <font fgcolor="#1A73E8">Messages</font></string>
    <string name="to_send_and_receive">To send and receive messages, set Messages\nas your default SMS app.</string>
    <string name="instant_replies_in_one_tap">Instant replies in one tap.</string>
    <string name="stay_safe_with">Stay safe with secure messaging.</string>
    <string name="set_as_default">Set as Default</string>
    <string name="skip">Skip</string>
    <string name="intro_txt1">Messaging Made Easy</string>
    <string name="intro_txt2"><![CDATA[Schedule & Relax]]></string>
    <string name="intro_txt3">Avoid Spam Messages</string>
    <string name="intro_subtxt1">Stay connected with a clean, organized inbox. Chat effortlessly anytime!</string>
    <string name="intro_subtxt2">Schedule texts to send automatically—never forget a message!</string>
    <string name="intro_subtxt3">Easily block spam and unwanted contacts to keep your inbox clean.</string>
    <string name="flag">flag</string>
    <string name="chinese">Chinese ( Simplified )</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="turkish">Turkish</string>
    <string name="thai">Thai</string>
    <string name="spanish">Spanish</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="polish">Polish</string>
    <string name="korean">Korean</string>
    <string name="japanese">Japanese</string>
    <string name="italian">Italian</string>
    <string name="indonesian">Indonesian</string>
    <string name="hindi">Hindi</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="filipino">Filipino</string>
    <string name="arabic">Arabic</string>
    <string name="bangla">Bangla</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="english">English</string>
    <string name="reminder_deleted">Reminder deleted</string>
    <string name="reminder_set_for">Reminder set for: </string>
    <string name="no_image_to_share">No image to share</string>
    <string name="deleted_selected_messages">Deleted selected messages</string>
    <string name="no_numbers_selected">No numbers selected</string>
    <string name="unblocked_selected_numbers">Unblocked selected numbers</string>
    <string name="please_set_this_app_as_default">Please set this app as default SMS handler</string>
    <string name="group_chat">Group Chat</string>
    <string name="failed_to_create_notification">Failed to create notification!</string>
    <string name="please_set_this_app">Please set this app as the default SMS app</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="subtext_english" translatable="false">English</string>
    <string name="subtext_German" translatable="false">Deutsch</string>
    <string name="subtext_Spanish" translatable="false">español</string>
    <string name="subtext_French" translatable="false">Français</string>
    <string name="subtext_Indian" translatable="false">हिंदी</string>
    <string name="subtext_Indonesia" translatable="false">bahasa</string>
    <string name="subtext_Japanese" translatable="false">日本語</string>
    <string name="subtext_Korean" translatable="false">한국인</string>
    <string name="subtext_portugal" translatable="false">Português</string>
    <string name="subtext_Russian" translatable="false">Русский</string>
    <string name="subtext_Vietnamese" translatable="false">Tiếng Việt</string>
    <string name="subtext_chinese" translatable="false">中国人</string>
    <string name="subtext_afrikaans" translatable="false">Afrikaans</string>
    <string name="subtext_arabic" translatable="false">عربي</string>
    <string name="subtext_bangla" translatable="false">বাংলা</string>
    <string name="subtext_italian" translatable="false">Italiana</string>
    <string name="subtext_polish" translatable="false">Polski</string>
    <string name="subtext_thai" translatable="false">แบบไทย</string>
    <string name="subtext_turkish" translatable="false">Türkçe</string>
    <string name="subtext_fillipino" translatable="false">Filipino</string>
    <string name="subtext_ukrainian" translatable="false">українська </string>
    <string name="appearance">Appearance</string>
    <string name="system_mode">System mode</string>
    <string name="font_size">Font size</string>
    <string name="normal">Normal</string>
    <string name="swipe_actions">Swipe actions</string>
    <string name="general">General</string>
    <string name="change_action">Change action</string>
    <string name="none">None</string>
    <string name="call">Call</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra large</string>
</resources>