<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/popup_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/product_sans_medium"
            android:text="@string/change_action"
            android:textColor="@color/textcolor"
            android:textFontWeight="500"
            android:textSize="20sp"
            android:textDirection="locale"/>

        <RadioGroup
            android:id="@+id/radioGroupSwipeActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <RadioButton
                android:id="@+id/rbNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:paddingStart="15dp"
                android:text="@string/none"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:paddingStart="15dp"
                android:text="@string/delete"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbArchive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:paddingStart="15dp"
                android:text="@string/archive"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:paddingStart="15dp"
                android:text="@string/call"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbMarkRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:paddingStart="15dp"
                android:text="@string/mark_as_read"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbMarkUnread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:paddingStart="15dp"
                android:text="@string/mark_as_unread"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/product_sans_medium"
                android:paddingHorizontal="20dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="500"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/product_sans_medium"
                android:paddingHorizontal="15dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="500"
                android:textSize="17dp" />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>


