<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/popup_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="start"
        android:text="@string/short_codes_are_local"
        android:textColor="@color/gray_txtcolor"
        android:textFontWeight="400"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="start"
        android:text="@string/you_can_reply"
        android:textColor="@color/gray_txtcolor"
        android:textFontWeight="400"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/product_sans_medium"
        android:paddingHorizontal="20dp"
        android:text="@string/ok"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="17dp" />


</LinearLayout>
