<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/editCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="start"
                android:textFontWeight="400"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/edit_categories"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recyclebinLy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="start"
                android:textFontWeight="400"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/recycle_bin"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/settingsLy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="start"
                android:textFontWeight="400"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/settings"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/policyLy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="start"
                android:textFontWeight="400"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
