<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/popup_bg"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/product_sans_medium"
            android:gravity="start"
            android:text="@string/this_sender_isnot_your_contacts"
            android:textColor="@color/textcolor"
            android:textFontWeight="500"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/txtDialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="start"
            android:lineSpacingExtra="3dp"
            android:text="@string/link_from_people"
            android:textColor="@color/gray_txtcolor"
            android:textFontWeight="400"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp">

            <CheckBox
                android:id="@+id/checkAgree"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/round_checkbox"
                android:button="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/TxtLy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/checkAgree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/checkAgree"
                app:layout_constraintTop_toTopOf="@+id/checkAgree">

                <TextView
                    android:id="@+id/txtTitl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/continue_with_possible_risk"
                    android:textColor="@color/textcolor"
                    android:textFontWeight="400"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/i_understand"
                    android:textColor="@color/gray_txtcolor"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitl" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:paddingHorizontal="10dp"
                android:fontFamily="@font/product_sans_medium"
                android:text="@string/continues"
                android:textColor="@color/gray_txtcolor"
                android:textFontWeight="500"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:paddingVertical="8dp"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/product_sans_medium"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="500"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
